--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                   <li>Real-time updates with a user-friendly UI.</li>
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit Text-C Web App" href="https://your-textc-app-link.com" target="_blank"
+                  <a aria-label="Visit Text-C Web App" href="https://my-portfolio-e1fa-rb8osypm5-arnab-pramaniks-projects.vercel.app" target="_blank"
                     data-position="top" data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                     <i class="fa fa-external-link"></i>
