--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
         <a aria-label="Open Varad's resume in a new tab"
-          href="https://varadbhogayata.github.io/assets/resume/Varad_Bhogayata_Resume.pdf" target="_blank"
+          href="https://drive.google.com/file/d/1jHdwr1rmXtmm6qSyKYHit2ydaTFZEf5G/view?usp=drive_link" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
@@ -200,7 +200,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Varad's Resume in a new tab"
-          href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
+          href="https://drive.google.com/file/d/1jHdwr1rmXtmm6qSyKYHit2ydaTFZEf5G/view?usp=drive_link" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
