--- a/index.html
+++ b/index.html
@@ -556,8 +556,44 @@
               </div>
             </div>
           </div>
-          
 
+          <!-- QRGen -->
+          <div class="col s12 m6 l4">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="QRGen App" src="./assets/img/qrgen-logo.png" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">QRGen - QR Code Generator App<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  A QR code generation web application with authentication, built using React and Vite.
+                </p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text"><small>Accomplishments</small><i class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tech Stack:</b> React.js, Vite, Clerk Auth, JavaScript, HTML, CSS</li>
+                  <li>Generate scannable QR codes from any URL input.</li>
+                  <li>Secure login and user management via Clerk authentication.</li>
+                  <li>Fast performance and modern UI powered by Vite.</li>
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit QRGen Web App" href="https://arnabqrgen.vercel.app" target="_blank"
+                    data-position="top" data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
+                    <i class="fa fa-external-link"></i>
+                  </a>
+                  <a aria-label="Visit the GitHub repo for QRGen" href="https://github.com/Arnab141/QRGen" target="_blank"
+                    data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
+                    <i class="fa fa-github"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
           <!-- weatherio -->
           <div class="col s12 m6 l4">
             <div class="card medium">
