--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                   <li>Interactive dashboard to manage trip requests and bookings.</li>
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit TravelBuddy Web App" href="https://your-travelbuddy-app-link.com" target="_blank"
+                  <a aria-label="Visit TravelBuddy Web App" href="https://travel-buddy-nine-roan.vercel.app/" target="_blank"
                     data-position="top" data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
                     <i class="fa fa-external-link"></i>
