--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
         <a aria-label="Open Varad's resume in a new tab"
-          href="https://drive.google.com/file/d/1gByBtAB376vpfM_j6Ml_OtYsv4rT9ARu/view?usp=drive_link" target="_blank"
+          href="https://drive.google.com/file/d/1GO022E27h7UY7vkg3kum18h7_KO_S-hr/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
@@ -200,7 +200,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Varad's Resume in a new tab"
-          href="https://drive.google.com/file/d/1gByBtAB376vpfM_j6Ml_OtYsv4rT9ARu/view?usp=drive_link" target="_blank"
+          href="https://drive.google.com/file/d/1GO022E27h7UY7vkg3kum18h7_KO_S-hr/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
