--- a/index.html
+++ b/index.html
@@ -259,17 +259,14 @@
 
           </h2>
         </blockquote> -->
-        <p>
-          I am a 3rd-year Computer Science Engineering student at Chitkara University, Himachal. I enjoy problem-solving
-          and coding, always striving to bring my best to every project.
+       <p>
+  I am a Computer Science Engineering student at Chitkara University, Himachal Pradesh, with a strong interest in backend development and problem-solving. I enjoy building full-stack applications that are scalable, user-friendly, and solve real-world problems.
 
-          I have worked with technologies like JavaScript, React, Node.js, Express, MongoDB, HTML, CSS, C, C++, and
-          Java. I have built projects such as an E-learning platform, a text-utilization app, and a food delivery
-          application (GoFood). Currently, I am developing TravelBuddy, a MERN-based platform connecting travelers.
+  My technical skills include JavaScript, React, Node.js, Express.js, MongoDB, HTML, CSS, C, C++, and Java. I have developed several projects, including an E-learning platform, a text-utilization app, and a MERN-based food delivery application called GoFood. Currently, I’m working on TravelBuddy, a full-stack travel companion platform designed to connect travelers with similar routes and schedules.
 
-          I am passionate about building scalable applications that solve real-world problems and enhance user
-          experiences.
-        </p>
+  I am passionate about continuous learning, clean code, and creating impactful software solutions that enhance user experiences.
+</p>
+
 
         <p>
         <ul>
@@ -893,7 +890,7 @@
               <p>
                 <b>Degree: </b>Bachelor of Engineering in Computer Science and Engineering
                 <br>
-                <b>CGPA: </b> 9.07
+                <b>CGPA: </b> 8.92
               </p>
           
               <ul>
