--- a/index.html
+++ b/index.html
@@ -515,6 +515,45 @@
               </div>
             </div>
           </div>
+          <div class="col s12 m6 l4">
+  <div class="card medium">
+    <div class="card-image waves-effect waves-block waves-light">
+      <img alt="QuickKart App" src="https://github.com/user-attachments/assets/6f2d2ebf-8c26-42cc-94f2-2e0e21e34f6e"
+        style="height: 100%; width: 100%" class="activator" />
+    </div>
+    <div class="card-content">
+      <span class="card-title activator teal-text hoverline">
+        QuickKart - E-Commerce Platform<i class="mdi-navigation-more-vert right"></i>
+      </span>
+      <p>
+        A full-stack e-commerce web application providing a seamless shopping experience.
+      </p>
+    </div>
+    <div class="card-reveal">
+      <span class="card-title grey-text"><small>Accomplishments</small><i
+          class="mdi-navigation-close right"></i></span>
+      <ul>
+        <li><b>Tech Stack:</b> React.js, Node.js, Express.js, MongoDB, JWT Auth, Stripe</li>
+        <li>Customer and Admin panels with secure role-based authentication.</li>
+        <li>Features include product search, cart management, order tracking & reviews.</li>
+        <li>Admin dashboard for product/category CRUD and order status updates.</li>
+      </ul>
+      <div class="card-action">
+        <a aria-label="Visit QuickKart Web App" href="https://quickkart-client.vercel.app/" target="_blank"
+          data-position="top" data-tooltip="View Online"
+          class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
+          <i class="fa fa-external-link"></i>
+        </a>
+        <a aria-label="Visit the GitHub repo for QuickKart" href="https://github.com/Arnab141/QuickKart" target="_blank"
+          data-position="top" data-tooltip="View Source"
+          class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
 
           <!--     RunNest -->
           <div class="col s12 m6 l4">
